hphp/hack/test/typecheck/reactive/test_global_class.php
<?hh // strict
class GlobalClassName {
  public static int $x = 0;

}


function foo()[rx]: void {
  $y = GlobalClassName::$x + 1;
}
